[gd_scene load_steps=26 format=3 uid="uid://c6s322jcilwwp"]

[ext_resource type="Script" path="res://Escenas/Eventos/pepino/evento_pepino.gd" id="1_8qjqu"]
[ext_resource type="SpriteFrames" uid="uid://drj80553lsie4" path="res://RecursosGatos/Pepino_Timmy.tres" id="2_mskrm"]
[ext_resource type="SpriteFrames" uid="uid://d3kfey7bkupmo" path="res://RecursosGatos/Pepino_Miguel.tres" id="3_hwhva"]
[ext_resource type="Texture2D" uid="uid://bsfarbyogdekf" path="res://Sprites/Comandos/FlechaDerecha.png" id="3_i6pxy"]
[ext_resource type="Texture2D" uid="uid://8ghf3slrnybo" path="res://Sprites/Comandos/FlechaIzquierda.png" id="4_4vkfi"]
[ext_resource type="Theme" uid="uid://v28k7lh33uhi" path="res://Escenas/Maingame/themeNameTags.tres" id="6_22ykq"]
[ext_resource type="Texture2D" uid="uid://clrtd08suvir6" path="res://Sprites/QuickTimeEvent/Pepino/Pepino10.png" id="14_np27c"]
[ext_resource type="Texture2D" uid="uid://c12p8dw8d325g" path="res://Sprites/QuickTimeEvent/Pepino/pepibomb1.png" id="14_xrbfh"]
[ext_resource type="Texture2D" uid="uid://ey5882q2d0ii" path="res://Sprites/QuickTimeEvent/Pepino/pepibomb2.png" id="15_am3c0"]
[ext_resource type="Texture2D" uid="uid://b4mghh0bxjuf8" path="res://Sprites/QuickTimeEvent/Pepino/pepibomb3.png" id="16_0biy1"]
[ext_resource type="Texture2D" uid="uid://bjolelihlln8o" path="res://Sprites/QuickTimeEvent/Pepino/pepibomb4.png" id="17_g115d"]
[ext_resource type="Texture2D" uid="uid://bb8xba7631jgk" path="res://Sprites/QuickTimeEvent/Pepino/pepibomb5.png" id="18_eivco"]
[ext_resource type="Texture2D" uid="uid://snvu1k53oh5w" path="res://Sprites/QuickTimeEvent/Pepino/pepibomb6.png" id="19_oueo4"]
[ext_resource type="Texture2D" uid="uid://brerjd32xx526" path="res://Sprites/QuickTimeEvent/Pepino/pepibomb7.png" id="20_fqw2v"]
[ext_resource type="Texture2D" uid="uid://b7e8gbcvmwjih" path="res://Sprites/QuickTimeEvent/Pepino/pepibomb8.png" id="21_d5rui"]
[ext_resource type="Texture2D" uid="uid://fo68qncllhxv" path="res://Sprites/QuickTimeEvent/Pepino/pepibomb9.png" id="22_4728u"]
[ext_resource type="Texture2D" uid="uid://epturoc0id2" path="res://Sprites/Fondos/mesa.png" id="42_k7hv6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_f4tn4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_np27c")
}],
"loop": false,
"name": &"boom",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_xrbfh")
}, {
"duration": 1.0,
"texture": ExtResource("15_am3c0")
}, {
"duration": 1.0,
"texture": ExtResource("16_0biy1")
}, {
"duration": 1.0,
"texture": ExtResource("17_g115d")
}, {
"duration": 1.0,
"texture": ExtResource("18_eivco")
}, {
"duration": 1.0,
"texture": ExtResource("19_oueo4")
}, {
"duration": 1.0,
"texture": ExtResource("20_fqw2v")
}, {
"duration": 1.0,
"texture": ExtResource("21_d5rui")
}, {
"duration": 1.0,
"texture": ExtResource("22_4728u")
}],
"loop": false,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="Animation" id="Animation_d3t1v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SprBomba:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SprBomba:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(212, 375)]
}

[sub_resource type="Animation" id="Animation_kqo28"]
resource_name = "explosion"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SprBomba:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.0002, 0.2),
"transitions": PackedFloat32Array(1, 1, 0.05, 1),
"update": 0,
"values": [Vector2(0.2, 0.2), Vector2(1e-05, 1e-05), Vector2(0.2, 0.2), Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SprBomba:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_2rpeo"]
resource_name = "spawn_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SprBomba:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 0.8),
"transitions": PackedFloat32Array(2, 0.1, 1),
"update": 0,
"values": [Vector2(560.141, -61), Vector2(560.141, 430), Vector2(560.141, 410)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SprBomba:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SprBomba:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.2, 0.2), Vector2(0.2, 0.2), Vector2(0.2, 0.18), Vector2(0.2, 0.2)]
}

[sub_resource type="Animation" id="Animation_i2vue"]
resource_name = "spawn_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SprBomba:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 0.8),
"transitions": PackedFloat32Array(2, 0.1, 1),
"update": 0,
"values": [Vector2(801.971, -61), Vector2(801.971, 430), Vector2(801.971, 410)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SprBomba:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.2, 0.2), Vector2(0.2, 0.2), Vector2(0.2, 0.18), Vector2(0.2, 0.2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SprBomba:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_bm7vc"]
resource_name = "swipe_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SprBomba:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(801.971, 410), Vector2(560.141, 410)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [0],
"method": &"bombPosChange"
}, {
"args": [],
"method": &"finishMoving"
}]
}

[sub_resource type="Animation" id="Animation_hr30r"]
resource_name = "swipe_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SprBomba:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(560.141, 410), Vector2(801.971, 410)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [1],
"method": &"bombPosChange"
}, {
"args": [],
"method": &"finishMoving"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wb75p"]
_data = {
"RESET": SubResource("Animation_d3t1v"),
"explosion": SubResource("Animation_kqo28"),
"spawn_left": SubResource("Animation_2rpeo"),
"spawn_right": SubResource("Animation_i2vue"),
"swipe_left": SubResource("Animation_bm7vc"),
"swipe_right": SubResource("Animation_hr30r")
}

[node name="EventoPepino" type="Node2D"]
script = ExtResource("1_8qjqu")

[node name="Gato" type="AnimatedSprite2D" parent="."]
position = Vector2(448, 331)
scale = Vector2(0.65, 0.65)
sprite_frames = ExtResource("2_mskrm")
animation = &"arriveth"
frame = 2

[node name="Gato2" type="AnimatedSprite2D" parent="."]
position = Vector2(914, 259)
scale = Vector2(-0.65, 0.65)
sprite_frames = ExtResource("3_hwhva")
animation = &"arriveth"
frame = 3
frame_progress = 1.0

[node name="Mesa" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(-3, 14)
scale = Vector2(0.712, 0.712)
texture = ExtResource("42_k7hv6")
centered = false

[node name="SprBomba" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(212, 375)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_f4tn4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wb75p")
}

[node name="TimerFinalEvento" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="arrowP1" type="Sprite2D" parent="."]
position = Vector2(227, 318)
scale = Vector2(0.35, 0.35)
texture = ExtResource("3_i6pxy")

[node name="arrowP2" type="Sprite2D" parent="."]
position = Vector2(1119, 308)
scale = Vector2(0.35, 0.35)
texture = ExtResource("4_4vkfi")

[node name="Label" type="Label" parent="."]
offset_left = 267.0
offset_top = 454.0
offset_right = 647.0
offset_bottom = 535.0
theme = ExtResource("6_22ykq")
text = "nombre largo que coloco"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
offset_left = 719.0
offset_top = 454.0
offset_right = 1099.0
offset_bottom = 535.0
theme = ExtResource("6_22ykq")
text = "nombre largo que coloco"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioPlayerGatos" type="AudioStreamPlayer" parent="."]
max_polyphony = 2
bus = &"SFX"

[node name="AudioPlayerPepino" type="AudioStreamPlayer" parent="."]
max_polyphony = 10
bus = &"SFX"

[node name="AudioPlayerPepino2" type="AudioStreamPlayer" parent="."]
max_polyphony = 10
bus = &"SFX"

[node name="TimerExplosion" type="Timer" parent="."]
process_callback = 0

[node name="piptimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.4
one_shot = true

[connection signal="animation_finished" from="Gato" to="." method="_on_gato_animation_finished"]
[connection signal="animation_finished" from="Gato2" to="." method="_on_gato_2_animation_finished"]
[connection signal="timeout" from="TimerFinalEvento" to="." method="_on_timer_final_evento_timeout"]
[connection signal="timeout" from="TimerExplosion" to="." method="_on_timer_explosion_timeout"]
[connection signal="timeout" from="piptimer" to="." method="_on_piptimer_timeout"]
